      instead of Java's) and optimize our digest hashing algorithm to take
      advantage of 64-bit platforms and to remove some possibly-costly
      voodoo.

  o Minor bugfixes (portability):
    - On some platforms, accept() can return a broken address.  Detect
      this more quietly, and deal accordingly.  (Fixes bug 483.)

  o Code simplifications and refactoring:
    - Make a bunch of functions static.  Remove some dead code.
    - Pull out about a third of the really big routerlist.c; put it in a
      new module, networkstatus.c.
    - Merge the extra fields in local_routerstatus_t back into
      routerstatus_t: we used to need one routerstatus_t for each
      authority's opinion, plus a local_routerstatus_t for the locally
      computed consensus opinion.  To save space, we put the locally
      modified fields into local_routerstatus_t, and only the common stuff
      into routerstatus_t.  But once v3 directories are in use, clients and
      caches will no longer need to hold authority opinions; thus, the
      rationale for keeping the types separate is now gone.
    - Make the code used to reschedule and reattempt downloads more uniform.
    - Turn all 'Are we a directory?' logic into a call to dirserver_mode().


Changes in version 0.2.0.7-alpha - 2007-09-21
  o New directory authorities:
    - Set up moria1 and tor26 as the first v3 directory authorities. See
      doc/spec/dir-spec.txt for details on the new directory design.

  o Major bugfixes (crashes):
    - Fix possible segfaults in functions called from
      rend_process_relay_cell(). Bugfix on 0.1.2.x.

  o Major bugfixes (bridges):
    - Fix a bug that made servers send a "404 Not found" in response to
      attempts to fetch their server descriptor. This caused Tor servers
      to take many minutes to establish reachability for their DirPort,
      and it totally crippled bridges. Bugfix on 0.2.0.5-alpha.
    - Make "UpdateBridgesFromAuthority" torrc option work: when bridge